@@ -131,6 +131,21 @@
 	  <variablelist remap='TP'>
 	    <varlistentry>
 	      <term>
+		<userinput>PORTAUDIO</userinput>
+	      </term>
+	      <listitem>
+		<para>
+		  PortAudio cross-platform audio framework.
+		</para>
+	      </listitem>
+	    </varlistentry>
+	  </variablelist>
+	</blockquote>
+
+	<blockquote remap='RS'>
+	  <variablelist remap='TP'>
+	    <varlistentry>
+	      <term>
 		<userinput>STDOUT</userinput>
 	      </term>
 	      <listitem>
@@ -719,6 +734,27 @@
 	    <para>
 	      The name of the JACK client to use.  Default is
 	      <userinput>glassplayer</userinput>.
+	    </para>
+	  </listitem>
+	</varlistentry>
+      </variablelist>
+    </listitem>
+  </varlistentry>
+
+  <varlistentry>
+    <term>
+      <emphasis remap='B'>PortAudio</emphasis>
+      (<option>--audio-device=</option><userinput>PORTAUDIO</userinput>)
+    </term>
+    <listitem>
+      <variablelist>
+	<varlistentry>
+	  <term>
+	    <option>--portaudio-index=</option><replaceable>index</replaceable>
+	  </term>
+	  <listitem>
+	    <para>
+	      The index number of the sound device to use.
 	    </para>
 	  </listitem>
 	</varlistentry>
